# azure-document-intelligence-vs-markitdown-vs-tika

./: .env.sample  .gitignore  README.md  azure_doc_intelli.py  markitdown_pdf.py  pyproject.toml  tika_pdf.py
output/: document_intelligence_output.json  document_intelligence_sample_tables.xlsx  markitdown_extracted_text.txt  tika_extracted_text.txt
